<resources>
    <string name="app_name">Khayal</string>
    <string name="size_text">File size</string>
    <string name="sample_text">N/N</string>
    <string name="appId" translatable="false">ca-app-pub-4032648664730667~3521836284</string>
    <string name="adUnitId_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adUnitId_home" translatable="false">ca-app-pub-4032648664730667/8401508310</string>
    <string name="adUnitId_viewNovel" translatable="false">ca-app-pub-4032648664730667/8071417393</string>
    <string name="adUnitId_details" translatable="false">ca-app-pub-4032648664730667/1506009042</string>
    <string name="ID_Interstitial_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ID_Interstitial" translatable="false">ca-app-pub-4032648664730667/2627519024</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="login_welcome_text">Welcome back</string>
    <string name="welcome_to_khayal">Welcome to khayal App</string>
    <string name="new_user_info">New user, Create new Account</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="remember_text">Remember me</string>
    <string name="login_forgot_text">Forgot Password?</string>
    <string name="login_by_google">By Google</string>
    <string name="login_error_user_is_not_exist">User is not Exist</string>
    <string name="email">Email</string>
    <string name="create_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="SignUp">Sign Up</string>
    <string name="name_empty_error">Name Required</string>
    <string name="email_empty_error">Email Required</string>

    <string name="country_empty_error">Country Required</string>

    <string name="password_empty_error">Password Required</string>
    <string name="password_is_less_error">Require 6 characters at least</string>
    <string name="password_mismatch_error">Password mismatch</string>
    <string name="name_invalid_error">Please enter a valid name</string>
    <string name="email_invalid_error">Please enter a valid email</string>
    <string name="you_have_account_text">Already have an account? Log In</string>
    <string name="send">Send</string>
    <string name="add_novel">Add novel</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Category Title</string>
    <string name="novel_title">Novel title</string>
    <string name="novel_des">Novel Description</string>
    <string name="novel_type">Novel type</string>
    <string name="writer_name">Writer name</string>
    <string name="add_pdf">Add pdf</string>
    <string name="pdf_title">Pdf title</string>
    <string name="edit_novel">Edit novel</string>
    <string name="update">Update</string>
    <string name="novel_details">Novel details</string>
    <string name="date">Date</string>
    <string name="chapters">Chapters</string>
    <string name="views">Views</string>
    <string name="unknown_error">sorry error happen</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="message_verify_account">please verify your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="no_data_text">No data found</string>
    <string name="forgot_password">Forget password?</string>
    <string name="go_chapters">Go to chapter</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="chapters_of_novel">Chapters of novel</string>
    <string name="number_of_chapter">number of chapter</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="favorite_books">Favorite books</string>
    <string name="edit_profile">Edit profile</string>
    <string name="number_of_pdf">number of chapters</string>
    <string name="delete">Delete</string>
    <string name="sign_out">SignOut</string>


    <string name="users">Users</string>
    <string name="likes">Likes</string>
    <string name="reads">Reads</string>
    <string name="filter">Filter</string>

    <string name="apply">Apply</string>
    <string name="results">Results: %s</string>



    <string name="fosha">Fosha</string>
    <string name="slang">Slang</string>
    <string name="gulf">Gulf</string>

    <string name="novel">novel</string>
    <string name="story">Story</string>
    <string name="novella">Novella</string>
    <string name="clear_filter">Clear Filter</string>

    <string name="error_require_title">Required Title</string>
    <string name="error_require_description">Required Description</string>
    <string name="error_require_external_link">Required Link</string>
    <string name="error_require_internal_link">Required User Destination</string>

    <string name="notifications">Notifications</string>
    <string name="description">Description</string>
    <string name="notification_title">Title</string>
    <string name="link">Link</string>
    <string name="choose_the_path">Choose the Path</string>
    <string name="external_link">External Link</string>
    <string name="internal_link">Internal Link</string>
    <string name="push_notification">Push Notification</string>
    <string name="no_thing">No thing</string>
    <string name="info_notify_for_user">Note: This notification will only be sent to this user</string>
    <string name="info_notify_for_all_user">Note: This notice will be sent to all users</string>
    <string name="notification">Notification</string>

    <string name="error_no_token">This user does not have token</string>
    <string name="notify_send">notify send</string>
    <string name="unread">UnRead</string>
    <string name="read">Read</string>
    <string name="system">System</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pass_info">You will receive a message in your E-Mail containing a link, click on it and then set the password</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="rate_us">Rate us</string>
    <string name="reviews">Reviews %s</string>
    <string name="count">Count %s</string>
    <string name="banners_manager">Banners Manager</string>
    <string name="error_require_report">Report required</string>
    <string name="hint_report">How we can help you?</string>
    <string name="success_report">Thanks for reporting</string>
    <string name="cover_size">Required\n(600 * 930)</string>
    <string name="edit_banner">Edit Banner</string>
    <string name="your_country">Your Country</string>
    <string name="category1">category1</string>
    <string name="category2">category2</string>
    <string name="category3">category3</string>
    <string name="category4">category4</string>
    <string name="category5">category5</string>

    <string name="banner_title">Banner Title</string>
    <string name="banner_size">Required (600 * 300)</string>
    <string name="add_Banner">Add Banner</string>
    <string name="remove_banner">Remove Banner</string>
    <string name="choose_ad_type">Choose the ad type</string>
    <string name="rotating">Rotating</string>
    <string name="banner">Banner</string>
    <string name="select_image">Select image +</string>
    <string name="error_require_image">Required image</string>
    <string name="error_require_type">Required  type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="the_account_has_been_created">The account has been created</string>
    <string name="login_succeeded">Login succeeded</string>
    <string name="login_failed">Login failed</string>


</resources>