<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:contentDescription="@string/app_name" />


        </RelativeLayout>

        <!--Title-->
        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/novel_title" />
        <!--Description-->
        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/novel_des" />

        <!--Category-->
        <TextView
            android:id="@+id/typeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:text="@string/novel_type" />

        <!--Category-->
        <TextView
            android:id="@+id/writerTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/sizeTv"
            android:layout_toStartOf="@id/typeTv"
            android:textAlignment="center"
            android:maxLines="1"
            android:text="@string/writer_name" />
        <!--Size-->
        <TextView
            android:id="@+id/sizeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/pdfRl"
            android:maxLines="1"
            android:text="@string/size_text" />

<!--        &lt;!&ndash; numberOfPdfs &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/numberOfPdfsTv"-->
<!--            style="@style/TextAppearance.MaterialComponents.Caption"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_toEndOf="@+id/pdfRl"-->
<!--            android:maxLines="1"-->
<!--            tools:text="@string/number_of_pdf" />-->

        <!--Show more options-->
        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_more_black" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>